k8s/old/bases/micro/deployment.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: micro
