k8s/old/bases/micro/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-api-ingress
  namespace: micro
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: micro.local
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service: 
              name: api
              port: 
                number: 443
